fix jarname, and add runtime dependencies